--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -1,3 +1,3 @@
 entity.VampireHunter.name=VampireHunter
 entity.Vampire.name=Vampire
-item.vampiresFear.name=Vampire's fear
+item.vampirism.vampiresFear.name=Vampire's fear
