--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -12,3 +12,4 @@ block.vampirism:bloodAltar.name=Blood Altar
 
 keys.vampirism.category=Vampirism
 keys.vampirism.suck=Suck blood
+keys.vampirism.auto=Auto Fill Blood Bottle
