Fixed WorldGen, fixed toggling the AutoFillBlood mode
Removed the status of AutoFillBlood from HUD, added a chat message
instead. Did some work on WorldGen, but will look into adding other
spawns similar to how other mobs spawn at night.

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -4,6 +4,7 @@ entity.vampirism:vampire.name=Vampire
 
 # Items
 item.vampirism:vampiresFear.name=Vampire's fear
+item.vampirism:bloodBottle.name=Blood Bottle
 
 # Blocks
 block.vampirism:bloodAltar.name=Blood Altar
