--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -8,9 +8,13 @@ item.vampirism:bloodBottle.name=Blood Bottle
 
 # Blocks
 block.vampirism:bloodAltar.name=Blood Altar
+block.vampirism:bloodAltarTier2.name=Blood Altar Tier 2
 
 # Keys
 
 keys.vampirism.category=Vampirism
 keys.vampirism.suck=Suck blood
 keys.vampirism.auto=Auto Fill Blood Bottle
+
+#General
+itemGroup.vampirism=Vampirism
