Adding some resources I accidently left out
Also, it looks like I may have created redundant code, to spawn the
blood altar in creative mode. The existing code didn't have a texture,
so I didn't realize what it was. I will fix this later.

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -5,6 +5,8 @@ entity.vampirism:vampire.name=Vampire
 # Items
 item.vampirism:vampiresFear.name=Vampire's fear
 item.vampirism:bloodBottle.name=Blood Bottle
+item.vampirism:spawnBloodAltar.name=Blood Altar
+item.vampirism:spawnBloodAltarTier2.name=Blood Altar Tier2
 
 # Blocks
 block.vampirism:bloodAltar.name=Blood Altar
