Created a config system, which is also available via the ingame config gui.

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -22,3 +22,4 @@ keys.vampirism.auto=Auto Fill Blood Bottle
 #General
 itemGroup.vampirism=Vampirism
 death.attack.sun=%1$s did not like the sun
+category.vampirism.balance=Balance settings
