--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -23,3 +23,5 @@ keys.vampirism.auto=Auto Fill Blood Bottle
 itemGroup.vampirism=Vampirism
 death.attack.sun=%1$s did not like the sun
 category.vampirism.balance=Balance settings
+category.vampirism.balance_level=Levelup balance settings
+category.vampirism.balance_player_mod=Vampire player modifier settings
