--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -6,6 +6,7 @@ entity.vampirism:vampire.name=Vampire
 item.vampirism:vampiresFear.name=Vampire's fear
 item.vampirism:bloodBottle.name=Blood Bottle
 item.vampirism:vampireFang.name=Vampire Fang
+item.vampirism:pitchfork.name=Pitchfork
 item.vampirism:spawnBloodAltar.name=Blood Altar
 item.vampirism:spawnBloodAltarTier2.name=Blood Altar Tier2
 
