Finished village handling

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -23,6 +23,13 @@ keys.vampirism.auto=Auto Fill Blood Bottle
 #General
 itemGroup.vampirism=Vampirism
 death.attack.sun=%1$s did not like the sun
+
+#Config
 category.vampirism.balance=Balance settings
+category.vampirism.balance.tooltip=Change almost any balance relevant property
 category.vampirism.balance_level=Levelup balance settings
 category.vampirism.balance_player_mod=Vampire player modifier settings
+category.vampirism.balance_mob_prop=Vampirism mob properties
+category.vampirism.balance_mob_prop.tooltip=Change properties of the mobs added by Vampirism
+category.vampirism.balance_vv_prop=Village properties
+category.vampirism.balance_vv_prop.tooltip=Change the way hunters in villages act and adjust other village related stuff
