Added a new church, which contains an altar that can make you normal human again, to the village generation

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -22,6 +22,10 @@ block.vampirism:cursedEarth.name=Cursed Earth
 #Tiles
 tile.vampirism:bloodAltarTier4.name=Blood Altar Tier 4
 
+#GUI
+gui.vampirism:revertback.head=Revert back to normal human
+gui.vampirism:revertback.desc=You will loose all your levels and die
+
 # Keys
 keys.vampirism.category=Vampirism
 keys.vampirism.suck=Suck blood
