--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -34,6 +34,7 @@ keys.vampirism.auto=Auto Fill Blood Bottle
 #General
 itemGroup.vampirism=Vampirism
 death.attack.sun=%1$s did not like the sun
+potion.vampirism:sunscreen=Sunscreen
 
 #Config
 category.vampirism.balance=Balance settings
