Implemented a skill system to manage multiple different skills with timers, cooldown phases etc. Hopefully this doesn't add to much overhead, but it should make adding more skills easier

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -35,8 +35,8 @@ keys.vampirism.auto=Auto Fill Blood Bottle
 itemGroup.vampirism=Vampirism
 death.attack.sun=%1$s did not like the sun
 potion.vampirism:sunscreen=Sunscreen
-text.vampirism:vp.level_to_low=Your vampire level is too low to become a Vampire Lord
-text.vampirism:vp.cooldown_not_over=Please wait until the cooldown is over
+text.vampirism:skill.level_to_low=Your vampire level is too low for that
+text.vampirism:skill.cooldown_not_over=Please wait until the cooldown is over
 
 #Config
 category.vampirism.balance=Balance settings
