Updated ModPotions and added new Skill (Temp regeneration, but high thirst)

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -35,6 +35,7 @@ keys.vampirism.auto=Auto Fill Blood Bottle
 itemGroup.vampirism=Vampirism
 death.attack.sun=%1$s did not like the sun
 potion.vampirism:sunscreen=Sunscreen
+potion.vampirism:thirst=Thirst
 text.vampirism:skill.level_to_low=Your vampire level is too low for that
 text.vampirism:skill.cooldown_not_over=Please wait until the cooldown is over
 
@@ -43,6 +44,7 @@ category.vampirism.balance=Balance settings
 category.vampirism.balance.tooltip=Change almost any balance relevant property
 category.vampirism.balance_level=Levelup balance settings
 category.vampirism.balance_player_mod=Vampire player modifier settings
+category.vampirism.balance_player_skills=Vampire player skills settings
 category.vampirism.balance_mob_prop=Vampirism mob properties
 category.vampirism.balance_mob_prop.tooltip=Change properties of the mobs added by Vampirism
 category.vampirism.balance_vv_prop=Village properties
