--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -30,6 +30,7 @@ gui.vampirism:revertback.desc=You will loose all your levels and die
 keys.vampirism.category=Vampirism
 keys.vampirism.suck=Suck blood
 keys.vampirism.auto=Auto Fill Blood Bottle
+keys.vampirism.skill=Activate vampire skills
 
 #General
 itemGroup.vampirism=Vampirism
