--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -13,6 +13,8 @@ item.vampirism:vampireFang.name=Vampire Fang
 item.vampirism:pitchfork.name=Pitchfork
 item.vampirism:humanHeart.name=Human Heart
 item.vampirism:torch.name=Torch
+item.vampirism:pureBlood.name=Pure Blood
+item.vampirism:sunscreen.name=Sunscreen
 
 # Blocks
 block.vampirism:bloodAltar.name=Blood Altar
@@ -20,6 +22,7 @@ block.vampirism:bloodAltarTier2.name=Blood Altar Tier 2
 block.vampirism:bloodAltarTier3.name=Blood Altar Tier 3
 block.vampirism:bloodAltarTier4.name=Blood Altar Tier 4
 block.vampirism:bloodAltarTier4Tip.name=Blood Altar Tier 4 Tip
+block.vampirism:churchAltar.name=Church Altar
 block.vampirism:cursedEarth.name=Cursed Earth
 block.vampirism:vampireOrchid.name=Vampire Orchid
 
@@ -48,6 +51,7 @@ text.vampirism:entity_level=Level
 text.vampirism:ritual_missing_times=You are items missing for this ritual
 text.vampirism:ritual_structure_wrong=The structure is wrong for this ritual
 text.vampirism:ritual_level_wrong=You cannot use this altar at this level
+text.vampirism:purity=Purity
 
 #Config
 category.vampirism.balance=Balance settings
