--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -22,7 +22,7 @@ block.vampirism:bloodAltarTier2.name=Blood Altar Tier 2
 block.vampirism:bloodAltarTier3.name=Blood Altar Tier 3
 block.vampirism:bloodAltarTier4.name=Blood Altar Tier 4
 block.vampirism:bloodAltarTier4Tip.name=Blood Altar Tier 4 Tip
-block.vampirism:churchAltar.name=Church Altar
+block.vampirism:churchAltar.name=Altar of Cleansing
 block.vampirism:cursedEarth.name=Cursed Earth
 block.vampirism:vampireOrchid.name=Vampire Orchid
 
