--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -48,10 +48,14 @@ potion.vampirism:saturation=Saturation
 text.vampirism:skill.level_to_low=Your vampire level is too low for that
 text.vampirism:skill.cooldown_not_over=Please wait until the cooldown is over
 text.vampirism:entity_level=Level
-text.vampirism:ritual_missing_times=You are items missing for this ritual
+text.vampirism:ritual_missing_times=You are missing items for this ritual
 text.vampirism:ritual_structure_wrong=The structure is wrong for this ritual
 text.vampirism:ritual_level_wrong=You cannot use this altar at this level
+text.vampirism:not_enough_blood=There is not enough blood in the altar
+text.vampirism:ritual_requirements_not_met=Not all requirements for this ritual were met
 text.vampirism:purity=Purity
+text.vampirism:auto_fill_enabled=Auto Fill Enabled
+text.vampirism:auto_fill_disabled=Auto Fill Disabled
 
 #Config
 category.vampirism.balance=Balance settings
