reimplemented coffin, started some work...

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -59,6 +59,7 @@ text.vampirism:purity=Purity
 text.vampirism:auto_fill_enabled=Auto Fill Enabled
 text.vampirism:auto_fill_disabled=Auto Fill Disabled
 text.vampirism:skill.deactivated_by_serveradmin=This skill is deactivated by your serveradmin
+text.vampirism:ritual_no_vampire=You need to be a vampire for this ritual
 
 #Config
 category.vampirism.balance=Balance settings
