--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -1,10 +1,10 @@
 # Entitys
-entity.vampirism:vampireHunter.name=Vampire Hunter
-entity.vampirism:vampire.name=Vampire
-entity.vampirism:ghost.name=Ghost
-entity.vampirism:vampireLord.name=Vampire Lord
-entity.vampirism:vampireMinion.name=Vampire Minion
-entity.vampirism:dracula.name=Dracula
+entity.vampirism.vampireHunter.name=Vampire Hunter
+entity.vampirism.vampire.name=Vampire
+entity.vampirism.ghost.name=Ghost
+entity.vampirism.vampireLord.name=Vampire Lord
+entity.vampirism.vampireMinion.name=Vampire Minion
+entity.vampirism.dracula.name=Dracula
 
 # Items
 item.vampirism:vampiresFear.name=Vampire's fear
