--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -15,19 +15,17 @@ item.vampirism:humanHeart.name=Human Heart
 item.vampirism:torch.name=Torch
 item.vampirism:pureBlood.name=Pure Blood
 item.vampirism:sunscreen.name=Sunscreen
+item.vampirism:leechSword.name=Leech
 
 # Blocks
-block.vampirism:bloodAltar.name=Blood Altar
-block.vampirism:bloodAltarTier2.name=Blood Altar Tier 2
-block.vampirism:bloodAltarTier3.name=Blood Altar Tier 3
-block.vampirism:bloodAltarTier4.name=Blood Altar Tier 4
-block.vampirism:bloodAltarTier4Tip.name=Blood Altar Tier 4 Tip
+block.vampirism:bloodAltar.name=Blood Altar of Saturation
+block.vampirism:bloodAltarTier2.name=Blood Altar of Inspiration
+block.vampirism:bloodAltarTier3.name=Blood Altar 3
+block.vampirism:bloodAltarTier4.name=Blood Altar of Infusion
+block.vampirism:bloodAltarTier4Tip.name=Blood Altar of Infusion Tip
 block.vampirism:churchAltar.name=Altar of Cleansing
 block.vampirism:cursedEarth.name=Cursed Earth
 block.vampirism:vampireOrchid.name=Vampire Orchid
-
-#Tiles
-tile.vampirism:bloodAltarTier4.name=Blood Altar Tier 4
 
 #GUI
 gui.vampirism:revertback.head=Revert back to normal human
