Seperated/abstracted the pie/radial menu code from the skill menu itself. Added names to skills

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -64,6 +64,18 @@ text.vampirism:cant_use_at_night=You cannot use this at night
 text.vampirism:other_players_preventing=Other players in this world are preventing you from using this item
 text.vampirism:no_more_minions=You are not able to controll any more minions
 
+#Skill
+skill.vampirism.bat_skill=Toggle Batmode
+skill.vampirism.change_weather=Weather
+skill.vampirism.cancel=Cancel
+skill.vampirism.freeze=Freeze
+skill.vampirism.invisibility=Invisibility
+skill.vampirism.regen=Regeneration
+skill.vampirism.revive_fallen=Revive Fallen
+skill.vampirism.summon_bats=Summon Bats
+skill.vampirism.teleport=Teleport
+skill.vampirism.vampire_rage=Vampire Rage
+
 #Config
 category.vampirism.balance=Balance settings
 category.vampirism.balance.tooltip=Change almost any balance relevant property
