Some improvements on the coffin

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -63,6 +63,8 @@ text.vampirism:cant_fly_day=You cannot fly at daytime
 text.vampirism:cant_use_at_night=You cannot use this at night
 text.vampirism:other_players_preventing=Other players in this world are preventing you from using this item
 text.vampirism:no_more_minions=You are not able to controll any more minions
+text.vampirism:coffin.noSleep=You cannot sleep at night
+text.vampirism:coffin.occupied=This coffin is occupied
 
 #Skill
 skill.vampirism.bat_skill=Toggle Batmode
