--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -62,9 +62,10 @@ text.vampirism:ritual_no_vampire=You need to be a vampire for this ritual
 text.vampirism:cant_fly_day=You cannot fly at daytime
 text.vampirism:cant_use_at_night=You cannot use this at night
 text.vampirism:other_players_preventing=Other players in this world are preventing you from using this item
-text.vampirism:no_more_minions=You are not able to controll any more minions
-text.vampirism:coffin.noSleep=You cannot sleep at night
+text.vampirism:no_more_minions=You are not able to control any more minions
+text.vampirism:coffin.noSleep=You can only sleep at day
 text.vampirism:coffin.occupied=This coffin is occupied
+text.vampirism:coffin.stopsleeping=Leave coffin
 
 #Skill
 skill.vampirism.bat_skill=Toggle Batmode
