--- a/src/main/resources/assets/vampirism/lang/de_DE.lang
+++ b/src/main/resources/assets/vampirism/lang/de_DE.lang
@@ -1,5 +1,5 @@
 # Entitys
-entity.vampirism:vampireHunter.name=Vampire Jäger
+entity.vampirism:vampireHunter.name=Vampire JÃ¤ger
 entity.vampirism:vampire.name=Vampir
 entity.vampirism:ghost.name=Geist
 entity.vampirism:vampireLord.name=Vampir Lord
@@ -18,7 +18,7 @@ item.vampirism:sunscreen.name=Sonnenschutz
 item.vampirism:coffin.name=Sarg
 
 # Blocks
-block.vampirism:bloodAltar.name=Blood Altar der Sättigung
+block.vampirism:bloodAltar.name=Blood Altar der SÃ¤ttigung
 block.vampirism:bloodAltarTier2.name=Blood Altar der Inspiration
 block.vampirism:bloodAltarTier3.name=Blood Altar 3
 block.vampirism:bloodAltarTier4.name=Blood Altar der Infusion
@@ -28,14 +28,14 @@ block.vampirism:cursedEarth.name=Verfluchte Erde
 block.vampirism:vampireOrchid.name=Vampir Orchidee
 
 #GUI
-gui.vampirism:revertback.head=Verwandle dich zurück in einen normalen Menschen
+gui.vampirism:revertback.head=Verwandle dich zurÃ¼ck in einen normalen Menschen
 gui.vampirism:revertback.desc=Du verlierst alle Level und stirbst
 
 # Keys
 keys.vampirism.category=Vampirismus
 keys.vampirism.suck=Blut Saugen
-keys.vampirism.auto=Automatisches Füllen der Blut Flaschen
-keys.vampirism.skill=Aktiviere Vampir Fähigkeiten
+keys.vampirism.auto=Automatisches FÃ¼llen der Blut Flaschen
+keys.vampirism.skill=Aktiviere Vampir FÃ¤higkeiten
 
 
 #General
@@ -43,21 +43,21 @@ itemGroup.vampirism=Vampirismus
 death.attack.sun=%1$s mochte die Sonne nicht
 potion.vampirism:sunscreen=Sonnenschutz
 potion.vampirism:thirst=Durst
-potion.vampirism:saturation=SÃ¤ttigung
-text.vampirism:skill.level_to_low=Dein Vampire Level ist zu niedrig dafür
+potion.vampirism:saturation=SÃƒÂ¤ttigung
+text.vampirism:skill.level_to_low=Dein Vampire Level ist zu niedrig dafÃ¼r
 text.vampirism:skill.cooldown_not_over=Bitte warte bis die Abklingzeit vorbei ist
 text.vampirism:entity_level=Level
-text.vampirism:ritual_missing_times=Dir fehlen Items für das Ritual
+text.vampirism:ritual_missing_times=Dir fehlen Items fÃ¼r das Ritual
 text.vampirism:ritual_structure_wrong=Die Struktur ist falsch fÃ¼r dieses Ritual
 text.vampirism:ritual_level_wrong=Du kannst den Altar auf diesem Level nicht verwenden
-text.vampirism:ritual_still_running=Das Ritual läuft noch
-text.vampirism:not_enough_blood=Da ist nicht genügend Blut im Altar
-text.vampirism:ritual_requirements_not_met=Nicht alle Vorraussetzungen sind erfüllt
+text.vampirism:ritual_still_running=Das Ritual lÃ¤uft noch
+text.vampirism:not_enough_blood=Da ist nicht genÃ¼gend Blut im Altar
+text.vampirism:ritual_requirements_not_met=Nicht alle Vorraussetzungen sind erfÃ¼llt
 text.vampirism:purity=Reinheit
-text.vampirism:auto_fill_enabled=Automatisches Füllen aktiviert
-text.vampirism:auto_fill_disabled=Automatisches Füllen deaktiviert
-text.vampirism:ritual_no_vampire=Für dieses Ritual musst du ein Vampir sein
-text.vampirism:skill.deactivated_by_serveradmin=Diese Fähigkeit wurde durch den Serveradmin deaktiviert
+text.vampirism:auto_fill_enabled=Automatisches FÃ¼llen aktiviert
+text.vampirism:auto_fill_disabled=Automatisches FÃ¼llen deaktiviert
+text.vampirism:ritual_no_vampire=FÃ¼r dieses Ritual musst du ein Vampir sein
+text.vampirism:skill.deactivated_by_serveradmin=Diese FÃ¤higkeit wurde durch den Serveradmin deaktiviert
 text.vampirism:cant_fly_day=Du kannst am Tag nicht fliegen
 text.vampirism:no_more_minions=Du kannst nicht noch mehr Minions kontrollieren
 text.vampirism:coffin.noSleep=Du kannst nur am Tag schlafen
@@ -72,7 +72,7 @@ skill.vampirism.freeze=Einfrieren
 skill.vampirism.invisibility=Unsichtbarkeit
 skill.vampirism.regen=Regenerierung
 skill.vampirism.revive_fallen=Wiederbelebung
-skill.vampirism.summon_bats=Beschwöre Fledermäuse
+skill.vampirism.summon_bats=BeschwÃ¶re FledermÃ¤use
 skill.vampirism.teleport=Teleport
 skill.vampirism.vampire_rage=Vampire Wut
 
@@ -82,7 +82,7 @@ category.vampirism.balance.tooltip=Konfiguriere fast jede Balance relevante Eins
 category.vampirism.balance_level=Levelup Einstellungen
 category.vampirism.balance_player_mod=Vampir Spieler Eigenschaften
 category.vampirism.balance_mob_prop=Vampirism Mob Einstellungen
-category.vampirism.balance_mob_prop.tooltip=Die Eigenschaften von hinzugefÃ¼gten Mobs anpassen 
+category.vampirism.balance_mob_prop.tooltip=Die Eigenschaften von hinzugefÃƒÂ¼gten Mobs anpassen 
 category.vampirism.balance_vv_prop=Dorf Eigenschaften
 category.vampirism.balance_vv_prop.tooltip=Konfiguriere wie sich JÃ¤ger im Dorf verhalten und andere Dorf Eigenschaften verÃ¤ndern
 
