--- a/src/main/resources/assets/vampirism/lang/pt_BR.lang
+++ b/src/main/resources/assets/vampirism/lang/pt_BR.lang
@@ -1,9 +1,9 @@
 # Entitys
-entity.vampirism.vampireHunter.name=Caçador de Vampiro
+entity.vampirism.vampireHunter.name=CaÃ§ador de Vampiro
 entity.vampirism.vampire.name=Vampiro
 entity.vampirism.ghost.name=Fantasma
 entity.vampirism.vampireLord.name=Lorde Vampiro
-entity.vampirism.vampireMinion.name=Vampiro Bebê
+entity.vampirism.vampireMinion.name=Vampiro BebÃª
 entity.vampirism.dracula.name=Dracula
 
 # Items
@@ -11,7 +11,7 @@ item.vampirism:vampiresFear.name=Terror do Vampiro
 item.vampirism:bloodBottle.name=Frasco de Sangue
 item.vampirism:vampireFang.name=Dentes de Vampiro
 item.vampirism:pitchfork.name=Tridente
-item.vampirism:humanHeart.name=Coração de Humano
+item.vampirism:humanHeart.name=CoraÃ§Ã£o de Humano
 item.vampirism:torch.name=Tocha
 item.vampirism:pureBlood.name=Sangue Puro
 item.vampirism:sunscreen.name=Protetor Solar
@@ -22,14 +22,14 @@ block.vampirism:bloodAltarTier2.name=Blood Altar of Inspiration
 block.vampirism:bloodAltarTier3.name=Blood Altar 3
 block.vampirism:bloodAltarTier4.name=Blood Altar of Infusion
 block.vampirism:bloodAltarTier4Tip.name=Blood Altar of Infusion Tip
-block.vampirism:churchAltar.name=Altar da Purificação
-block.vampirism:cursedEarth.name=Terra Amaldiçoada
-block.vampirism:vampireOrchid.name=Orquídea Vampirica
+block.vampirism:churchAltar.name=Altar da PurificaÃ§Ã£o
+block.vampirism:cursedEarth.name=Terra AmaldiÃ§oada
+block.vampirism:vampireOrchid.name=OrquÃ­dea Vampirica
 
 
 #GUI
 gui.vampirism:revertback.head=Voltar a ser um humano normal
-gui.vampirism:revertback.desc=Você ira perder todos os seus níveis e ira morrer
+gui.vampirism:revertback.desc=VocÃª ira perder todos os seus nÃ­veis e ira morrer
 
 # Keys
 keys.vampirism.category=Vampirism
@@ -42,26 +42,26 @@ itemGroup.vampirism=Vampirism
 death.attack.sun=%1$s nao gosta do sol :D
 potion.vampirism:sunscreen=Protetor solar
 potion.vampirism:thirst=Sede
-potion.vampirism:saturation=Saturação
-text.vampirism:skill.level_to_low=O seu nivel de vampiro é muito baixo para isso
-text.vampirism:skill.cooldown_not_over=Por favor espere até que o tempo de recarga complete (cooldown)
+potion.vampirism:saturation=SaturaÃ§Ã£o
+text.vampirism:skill.level_to_low=O seu nivel de vampiro Ã© muito baixo para isso
+text.vampirism:skill.cooldown_not_over=Por favor espere atÃ© que o tempo de recarga complete (cooldown)
 text.vampirism:entity_level=Nivel
 text.vampirism:ritual_missing_times=Ainda falta itens para esse ritual
 text.vampirism:ritual_structure_wrong=A estrutura do ritual esta errada
-text.vampirism:ritual_level_wrong=Você nao pode usar este altar no seu nivel
-text.vampirism:not_enough_blood=Não a sangue o suficiente no altar
+text.vampirism:ritual_level_wrong=VocÃª nao pode usar este altar no seu nivel
+text.vampirism:not_enough_blood=NÃ£o a sangue o suficiente no altar
 text.vampirism:ritual_requirements_not_met=Nem todos os requisitos para esse ritual foram cumpridos
 text.vampirism:purity=Pureza
 text.vampirism:auto_fill_enabled=Auto Carregamento Ativado
 text.vampirism:auto_fill_disabled=Auto Carregamento Desativado
 
 #Config
-category.vampirism.balance=Configurações de balanceamento
-category.vampirism.balance.tooltip=Modifique quase todos os tipos de configuraçoes relevantes
+category.vampirism.balance=ConfiguraÃ§Ãµes de balanceamento
+category.vampirism.balance.tooltip=Modifique quase todos os tipos de configuraÃ§oes relevantes
 category.vampirism.balance_level=Balanceamento de Niveis
-category.vampirism.balance_player_mod=Configurações do Jogador-Vampiro
-category.vampirism.balance_player_skills=Configurações das habilidades do jogador
+category.vampirism.balance_player_mod=ConfiguraÃ§Ãµes do Jogador-Vampiro
+category.vampirism.balance_player_skills=ConfiguraÃ§Ãµes das habilidades do jogador
 category.vampirism.balance_mob_prop=Propriedades dos mobs Vampiros
-category.vampirism.balance_mob_prop.tooltip=Mudar as configurações dos mobs adicionados pelo Vampirism
+category.vampirism.balance_mob_prop.tooltip=Mudar as configuraÃ§Ãµes dos mobs adicionados pelo Vampirism
 category.vampirism.balance_vv_prop=Propriedades do Villager
-category.vampirism.balance_vv_prop.tooltip=Mudar a maneira como os caçadores agem nas vilas e ajustar outras opções relacionadas as vilas.
+category.vampirism.balance_vv_prop.tooltip=Mudar a maneira como os caÃ§adores agem nas vilas e ajustar outras opÃ§Ãµes relacionadas as vilas.
